# qa-UScomparer

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qa_uscomparer/: __init__.py  analyzer.py  cli.py  comparator.py  description_diff.py  display.py  jira_fetcher.py  mcp_client.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_comparator.py  test_description_diff.py  test_jira_fetcher.py
